--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body class="home-page">
         <nav>
             <div.right-align>
-                <a class="header" href="">Home</a>
+                <a class="header" href="https://evanlynchmedia.com">Home</a>
             </div>
             <div.right-align>
                 <a class="header" href="https://photos.evanlynchmedia.com" target="_blank" rel="noopener noreferrer">Photos</a>
