--- a/index.html
+++ b/index.html
@@ -6,22 +6,62 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="main.css" />
         <title>Evan Lynch Media</title>
+        <link rel="icon" type="image/svg+xml" href="logo-files/WEBLOGO.svg">
     </head>
-    <body class="home-page">
-        <nav>
-            <div.right-align>
-                <a class="header" href="https://evanlynchmedia.com">Home</a>
+    <body>
+        <div id="home" class="home-page">
+            <div>
+                <h1>Evan Lynch Media</h1>
             </div>
-            <div.right-align>
-                <a class="header" href="https://photos.evanlynchmedia.com" target="_blank" rel="noopener noreferrer">Photos</a>
+            <div>
+                <h2><a class="link" href="#learnMore">LEARN MORE</a></h2>
             </div>
-            <div.right-align>
-                <a class="header" href="contact.html">Contact</a>
+            <nav class="top-bar">
+                <div class="horizontal-align">
+                    <a class="header" href="#home">Home</a>
+                </div>
+                <div class="horizontal-align">
+                    <a class="header" href="https://photos.evanlynchmedia.com" target="_blank" rel="noopener noreferrer">Photos</a>
+                </div>
+                <div class="nav-logo">
+                    <a href="https://www.evanlynchmedia.com">
+                        <img style="border-radius: 50%" class="nav-logo" src="logo-files/WEBLOGO.svg">
+                    </a>
+                </div>
+            </nav>
+        </div>
+        <div class="learn-more" id="learnMore">
+            <h3>About Me</h3>
+            <div class="about-me">
+                <p1>
+                    Note: This website is still under construction. I am adding mobile functionality and am currently adding
+                    more of my work.
+                    
+                    <br><br>
+
+                    I am a junior in high school based in Chattanooga with a passion for all things marketing related. I recently
+                    obtained a certification in Digital Marketing from Hubspot Academy, and I love working
+                    in both sports and childcare. I have been in photography for over 2 years
+                    now, and videography for about a year and a half. I currently work as a game-day photographer and
+                    videographer for the Chattanooga Lookouts, a Double-A baseball team. In June 2023, I began work as the
+                    social media manager for Camp Big Fish, a children's day-camp located mainly in East Tennessee, but
+                    expanding towards Middle Tennessee. I also work with Silverdale Baptist Academy to create content for
+                    the football and boys basketball teams. Services that I offer include digital marketing, photography,
+                    videography, social media management, and graphic design. In the future I will likely also offer web
+                    development.
+                    
+                    <br><br>
+
+                    Contact me for any inquiries about anything! Feel free to email me or message me on Instagram. Contact me at
+                    <a href="mailto: evan@evanlynchmedia.com">evan@evanlynchmedia.com</a>, or @evanlynchmedia on Instagram.
+                </p1>
             </div>
-        </nav>
-            <p class="under-construction">
-            Website is currently under construction. For now, view photos
-                <a href="https://photos.evanlynchmedia.com" target="_blank" rel="noopener noreferrer">here.</a>
-            </p>
+            <footer>
+                <div>
+                    <p>Evan Lynch Media</p>
+                    <p><a href="mailto: evan@evanlynchmedia.com">evan@evanlynchmedia.com</a></p>
+                </div>
+            </footer>
+        </div>
     </body>
 </html>
