--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         <link rel="stylesheet" type="text/css" href="main.css" />
         <title>Evan Lynch Media</title>
         <link rel="icon" type="image/svg+xml" href="logo-files/WEBLOGO.svg">
+        <script type="text/javascript">
+
+            if (screen.width <= 699) {
+            document.location = "mobile.html";
+            }
+            
+            </script>
     </head>
     <body>
         <div id="home" class="home-page">
@@ -24,7 +31,7 @@
                     <a class="header" href="https://photos.evanlynchmedia.com" target="_blank" rel="noopener noreferrer">Photos</a>
                 </div>
                 <div class="nav-logo">
-                    <a href="https://www.evanlynchmedia.com">
+                    <a href="index.html">
                         <img style="border-radius: 50%" class="nav-logo" src="logo-files/WEBLOGO.svg">
                     </a>
                 </div>
