--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script type="text/javascript">
 
             if (screen.width <= 699) {
-            document.location = "mobile.html";
+            document.location = "https://m.evanlynchmedia.com";
             }
             
             </script>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="nav-logo">
                     <a href="index.html">
-                        <img style="border-radius: 50%" class="nav-logo" src="logo-files/WEBLOGO.svg">
+                        <img alt="ELM" style="border-radius: 50%" class="nav-logo" src="logo-files/WEBLOGO.svg">
                     </a>
                 </div>
             </nav>
